force-app/main/default/objects/noduplicates__Duplicate_Pair__c/fields/noduplicates__Duplicate__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Duplicate__c</fullName>
    <label>Duplicate</label>
    <referenceTo>noduplicates__Duplicate__c</referenceTo>
    <relationshipLabel>Duplicate Pairs</relationshipLabel>
    <relationshipName>Duplicate_Pairs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>