force-app/main/default/objects/noduplicates__Duplicate_Pair__c/fields/noduplicates__Record_After_Merge__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Record_After_Merge__c</fullName>
    <label>Record After Merge</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>